--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 		<main>
 			<section>
 				<article class="card">
-					<div class="card-background card-1"></div>
+                    <img src="./assets/img/4287309c581511998d161daaf1b42117.jpg" class="card-background" alt="batcave">
 					<img src="./assets/img/Frame.svg" alt="heart" class="heart" />
-					<div class="portrait portrait-1"></div>
+                    <img src="./assets/img/cd1a20be714408b5cbdb5ec72de77010.jpg" class="portrait" alt="batman">
 					<div class="card-text">
 						<h2>BATMAN</h2>
 						<p>
@@ -33,9 +33,10 @@
 					</div>
 				</article>
 				<article class="card">
-					<div class="card-background card-2"></div>
+                    <picture></picture>
+                    <img src="./assets/img/2d7ba7d6fd90359157661c84fdf828f4.jpg" class="card-background" alt="explosion">
 					<img src="./assets/img/Frame.svg" alt="heart" class="heart" />
-					<div class="portrait portrait-2"></div>
+                    <img src="./assets/img/b6f616bb61603d4e0fc1ef712828fb3f.jpg" class="portrait" alt="harley quinn">
 					<div class="card-text">
 						<h2>Harley Quinn</h2>
 						<p>
@@ -47,9 +48,9 @@
 					</div>
 				</article>
 				<article class="card">
-					<div class="card-background card-3"></div>
+					<img src="./assets//img/4287309c581511998d161daaf1b42117.jpg" class="card-background" alt="batcave">
 					<img src="./assets/img/Frame.svg" alt="heart" class="heart" />
-					<div class="portrait portrait-3"></div>
+                    <img src="./assets/img/cd1a20be714408b5cbdb5ec72de77010.jpg" class="portrait" alt="batman">
 					<div class="card-text">
 						<h2>BATMAN</h2>
 						<p>
